Update optimization comparison results for all scenarios and solar_system (250 ticks)